# serena-rs

./: .gitignore  README.md
serena-mcp/: Cargo.toml
serena-mcp/src/: cli.rs  lib.rs  main.rs  rpc.rs  tool.rs
serena-mcp/src/tools/: files.rs  memory.rs  mod.rs  symbols.rs  workflow.rs
