[package]
name = "serena-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
regex = "1.10"
time = { version = "0.3", features = ["formatting"] }
walkdir = "2.5"
once_cell = "1.19"
